<resources>
    <string name="app_name">Pikachu</string>
    <string name="welcome">Welcome!</string>
    <string name="please_enter_mobile_for_otp">Enter your mobile number to receive OTP.</string>
    <string name="phone_number">Mobile Number</string>
    <string name="error_phone_number_should_contain_10_digits">Phone number should contain 10 digits</string>
    <string name="i_agree_tandc"><![CDATA[By clicking this checkbox you agree to the Terms & Conditions and the Privacy Policy. Please click the links and read them carefully before proceeding.]]></string>
    <string name="please_click_checkbox_to_proceed">Please click on the checkbox to proceed</string>
    <string name="send_otp">Send OTP</string>
    <string name="login_disabled_txt">Technical maintenance in progress. Please try logging in later</string>
    <string name="check_internet_connection">Please Check your Internet Connection</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="loading_please_wait">Loading please wait...</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="please_type_the_verification_code">Please enter the 4 digit code sent to you at</string>
    <string name="edit_caps">EDIT</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="waiting_for_sms">Waiting for SMS</string>
    <string name="sample_seconds">30s</string>
    <string name="too_many_otp_request_label">Too many OTP requests. Please try again after 15 minutes</string>
    <string name="facing_issues">Facing issues?</string>
    <string name="report">Report</string>
    <string name="country_code_india">+91</string>
    <string name="some_problem_occurred">Some problem occured!</string>
    <string name="home">Home</string>
    <string name="chats">Chats</string>
    <string name="my_hub">My Hub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quick_sell">Quick Sell</string>
    <string name="pinder">Pinder</string>
    <string name="veterinarian">Veterinarian</string>
    <string name="grooming">Grooming</string>
    <string name="products">Products</string>
    <string name="enroll">Enroll</string>
</resources>